tests/ui/thread_app_define_capture.stderr
error: lifetime may not live long enough
  --> tests/ui/thread_app_define_capture.rs:33:42
   |
32 |     fusible::kernel_enter(|app_define| {
   |                            ----------
   |                            |
   |                            has type `&'1 AppDefine<'1, '_>`
   |                            has type `&AppDefine<'_, '2>`
33 |         let app_define = UnsafeAppDefine(app_define);
   |                                          ^^^^^^^^^^ this usage requires that `'1` must outlive `'2`
   |
   = note: requirement occurs because of the type `AppDefine<'_, '_>`, which makes the generic argument `'_` invariant
   = note: the struct `AppDefine<'ad, 'pke>` is invariant over the parameter `'ad`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
